# zsh-chat

./: .gitignore  Makefile  README.md
client/: zsh-chat.zsh
client/rust-client/: Cargo.toml
client/rust-client/src/: api.rs  app.rs  main.rs  models.rs  relay.rs  ui.rs
conductor/: agent-guidance.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  vision.md
conductor/tracks/001-project-scaffolding/: plan.md
conductor/tracks/002-cli-skeleton/: plan.md
conductor/tracks/003-backend-mvp/: plan.md
conductor/tracks/004-tui-development/: plan.md
conductor/tracks/006-rust-client-transition/: plan.md
server/: index.js  package.json
